feat: 更新脚本